sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:3: error: not found: type int
  var i: int = 0;
         ^AlgSelectionSort:4: error: not found: type int
  var min: int;
           ^AlgSelectionSort:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var min: int;
      ^AlgSelectionSort:4: error: local variables must be initialized
  var min: int;
      ^